force-app/main/default/objects/QuoteLineItem/fields/Comentario_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Aprobaci_n__c</fullName>
    <label>Comentario Aprobación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>