force-app/main/default/objects/QuoteLineItem/fields/Contribucion_Peso__c.field-meta.xml
<CustomField>
    <fullName>Contribucion_Peso__c</fullName>
    <formula>( Precio_Venta__c -  Costo__c ) /  Peso_Producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribucion por kilo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>