force-app/main/default/objects/QuoteLineItem/fields/Desc_Aut_nomo__c.field-meta.xml
<CustomField>
    <fullName>Desc_Aut_nomo__c</fullName>
    <formula>Product2.Descuento_Autonomo_de_Asesor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desc.Autónomo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>