force-app/main/default/objects/QuoteLineItem/fields/DescuentoModificado__c.field-meta.xml
<CustomField>
    <fullName>DescuentoModificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DescuentoModificado</label>
    <type>Checkbox</type>
</CustomField>