force-app/main/default/objects/QuoteLineItem/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Sin gestión</fullName>
                <default>true</default>
                <label>Sin gestión</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>