force-app/main/default/objects/QuoteLineItem/fields/Fecha_desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_desde__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Fecha desde</label>
    <type>Date</type>
</CustomField>