force-app/main/default/objects/QuoteLineItem/fields/Fecha_max_descuento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_max_descuento__c</fullName>
    <formula>Product2.Fecha_maxima_de_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha max. descuento</label>
    <type>Date</type>
</CustomField>