force-app/main/default/objects/QuoteLineItem/fields/M_Contribucion_Peso__c.field-meta.xml
<CustomField>
    <fullName>M_Contribucion_Peso__c</fullName>
    <label>Contribucion Peso M</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>