force-app/main/default/objects/QuoteLineItem/fields/M_Desc_Aut_nomo__c.field-meta.xml
<CustomField>
    <fullName>M_Desc_Aut_nomo__c</fullName>
    <label>Desc Autónomo  M</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>