force-app/main/default/objects/QuoteLineItem/fields/M_Fecha_max_descuento__c.field-meta.xml
<CustomField>
    <fullName>M_Fecha_max_descuento__c</fullName>
    <label>Fecha max. descuento M</label>
    <type>Date</type>
</CustomField>