force-app/main/default/objects/QuoteLineItem/fields/M_Margen_producto__c.field-meta.xml
<CustomField>
    <fullName>M_Margen_producto__c</fullName>
    <label>Margen producto M</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>