force-app/main/default/objects/QuoteLineItem/fields/M_Precio_Final__c.field-meta.xml
<CustomField>
    <fullName>M_Precio_Final__c</fullName>
    <label>Precio Final M</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>