force-app/main/default/objects/QuoteLineItem/fields/M_PrecioListaUni__c.field-meta.xml
<CustomField>
    <fullName>M_PrecioListaUni__c</fullName>
    <label>PrecioListaUni M</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>