force-app/main/default/objects/QuoteLineItem/fields/Margen_producto__c.field-meta.xml
<CustomField>
    <fullName>Margen_producto__c</fullName>
    <formula>(( M_Precio_Final__c  -  Costo__c ) /  M_Precio_Final__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>