force-app/main/default/objects/QuoteLineItem/fields/Precio_deseado__c.field-meta.xml
<CustomField>
    <fullName>Precio_deseado__c</fullName>
    <label>Precio deseado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>