force-app/main/default/objects/QuoteLineItem/fields/Precio_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta__c</fullName>
    <formula>if ( M_Precio_Final__c = 0, PricebookEntry.UnitPrice *  (1- Discount),  M_Precio_Final__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Cliente Neto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>