force-app/main/default/objects/QuoteLineItem/fields/PrecioListaUni__c.field-meta.xml
<CustomField>
    <fullName>PrecioListaUni__c</fullName>
    <formula>PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrecioListaUni</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>