force-app/main/default/objects/QuoteLineItem/fields/Rappel__c.field-meta.xml
<CustomField>
    <fullName>Rappel__c</fullName>
    <description>Recibe la información del Rappel en el Panel de Seteo</description>
    <label>Rappel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>