force-app/main/default/objects/QuoteLineItem/fields/SKU_formula__c.field-meta.xml
<CustomField>
    <fullName>SKU_formula__c</fullName>
    <formula>Product2.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>