force-app/main/default/objects/QuoteLineItem/fields/Suberente_Producto__c.field-meta.xml
<CustomField>
    <fullName>Suberente_Producto__c</fullName>
    <formula>text(Product2.Sub_gerente_de_categoria_responsable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subgerente Producto</label>
    <type>Text</type>
</CustomField>