force-app/main/default/objects/QuoteLineItem/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <formula>Quote.Opportunity.Sucursal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal</label>
    <type>Text</type>
</CustomField>