force-app/main/default/objects/QuoteLineItem/fields/UMV_Panel__c.field-meta.xml
<CustomField>
    <fullName>UMV_Panel__c</fullName>
    <description>Es para traer el UMV desde el panel de seteo</description>
    <label>UMV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>