force-app/main/default/objects/QuoteLineItem/validationRules/Modificacion_QLI_en_Estado_Aprobado.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificacion_QLI_en_Estado_Aprobado</fullName>
    <active>true</active>
    <description>No se pueden modificar los %Descuento de los QLI una vez que el estado de la Cotizacion sea Aprobado</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Quote.Status, &quot;Draft&quot;) = FALSE,
    ISCHANGED(Discount)
)</errorConditionFormula>
    <errorMessage>No se puede cambiar el descuento del QLI si el estado de la Cotización ya no es borrador.</errorMessage>
</ValidationRule>